--- a/website/templates/navbar.html
+++ b/website/templates/navbar.html
@@ -9,9 +9,17 @@
           {% if user.is_authenticated %}
 
           <li class="nav-item">
+            <a class="nav-link" href="{% url 'add_record' %}">Add Record</a>
+          </li>
+
+          <li class="nav-item">
             <a class="nav-link" href="{% url 'logout' %}">LogOut</a>
           </li>
           {% else %}
+          <li class="nav-item">
+            <a class="nav-link" href="{% url 'register' %}">Register</a>
+          </li>
+          
           <li class="nav-item">
             <a class="nav-link" href="{% url 'home' %}">Home</a>
           </li>
